--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,36 @@
     <script src = "script.js">  </script>
 
 
-
 </head>
 <body >
+ <div class="center-div">
 
-<!--<svg width="400" height="800">-->
-    <!--&lt;!&ndash;<rect x="0" y="0" width="50" height="50" />&ndash;&gt;-->
-    <!--&lt;!&ndash;<rect x="50" y="0" width="50" height="50" />&ndash;&gt;-->
 
-<!--</svg>-->
+<svg class="logo background"  viewBox="0 0 896 422">
+
+ <g id="Слой_x0020_1">
+  <metadata id="CorelCorpID_0Corel-Layer"/>
+  <polygon class="fill str0" points="40,382 195,382 195,90 121,90 121,51 40,51 "/>
+  <rect class="fill str0" x="638" y="46" width="75" height="335"/>
+  <polygon class="fill str0" points="344,382 494,382 494,90 422,90 422,51 344,51 "/>
+  <rect class="fill str0" x="195" y="90" width="148" height="292"/>
+  <rect class="fill str0" x="494" y="90" width="144" height="292"/>
+  <rect class="fill str0" x="713" y="89" width="149" height="292"/>
+  <rect class="point str0" x="638" y="46" width="75" height="84"/>
+  <path class="passes" d="M121 154l0 154m-7 -145l85 0"/>
+  <path class="passes" d="M417 154l0 154m-7 -145l85 0"/>
+  <line class="fil0 str0" x1="554" y1="248" x2="640" y2= "248" />
+  <line class="fil0 str0" x1="565" y1="389" x2="565" y2= "314" />
+  <line class="fil0 str0" x1="268" y1="232" x2="268" y2= "158" />
+  <line class="fil0 str0" x1="565" y1="180" x2="565" y2= "155" />
+  <line class="fil0 str0" x1="259" y1="300" x2="344" y2= "300" />
+  <line class="fil0 str0" x1="717" y1="267" x2="794" y2= "267" />
+  <line class="fil0 str0" x1="786" y1="309" x2="786" y2= "260" />
+  <path class="passes" d="M855 197l-78 0m8 -41l0 49"/>
+ </g>
+</svg>
+
+ </div>
 
 </body>
 </html>
