--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
  <div class="center-div">
 
 
-<svg class="logo background"  viewBox="0 0 896 422">
+<svg  id="logo" class="logoStartScreen"  viewBox="0 0 896 422">
 
  <g id="Слой_x0020_1">
   <metadata id="CorelCorpID_0Corel-Layer"/>
