game-over-functionality

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,6 @@
 
 
 <svg  id="logo" class="logoStartScreen"  viewBox="0 0 896 422">
-
- <g id="Слой_x0020_1">
-  <metadata id="CorelCorpID_0Corel-Layer"/>
   <polygon class="fill str0" points="40,382 195,382 195,90 121,90 121,51 40,51 "/>
   <rect class="fill str0" x="638" y="46" width="75" height="335"/>
   <polygon class="fill str0" points="344,382 494,382 494,90 422,90 422,51 344,51 "/>
@@ -39,8 +36,46 @@
   <line class="fil0 str0" x1="717" y1="267" x2="794" y2= "267" />
   <line class="fil0 str0" x1="786" y1="309" x2="786" y2= "260" />
   <path class="passes" d="M855 197l-78 0m8 -41l0 49"/>
- </g>
 </svg>
+
+  <svg  id="play"    viewBox="0 0 270 130">
+    <rect class="fil0play str0play" x="6" y="39" width="45" height="45"/>
+    <polygon class="fil1play str0play" points="218,16 235,16 235,76 246,76 246,16 262,16 262,120 218,120 218,103 246,103 246,94 218,94 "/>
+    <path class="fil1play str0play" d="M166 16l44 0 0 93 -44 0 0 -68 26 0 0 -9 -26 0 0 -16zm18 43l9 0 0 33 -9 0 0 -33z"/>
+    <path class="fil1play str0play" d="M86 16l44 0 0 94 -26 0 0 10 -18 0 0 -104zm16 18l11 0 0 57 -11 0 0 -57z"/>
+    <rect class="fil1play str0play" x="139" y="6" width="18" height="104"/>
+  </svg>
+
+
+  <svg id="paused"     viewBox="0 0 135 55">
+   <path class="fil0Paused str0Paused" d="M23 10l-18 0 0 41 7 0 0 -4 11 0 0 -37zm-6 6l-6 0 0 24 6 0 0 -24z"/>
+   <polygon class="fil0Paused str0Paused" points="49,10 56,10 56,40 60,40 60,10 66,10 66,48 49,48 "/>
+   <path class="fil0Paused str1Paused" d="M110 48l-18 0 0 -38 18 0 0 27 -11 0 0 4 11 0 0 7zm-7 -17l-5 0 0 -13 5 0 0 13z"/>
+   <path class="fil0Paused str0Paused" d="M114 48l17 0 0 -41 -7 0 0 4 -11 0 0 38zm6 -6l6 0 0 -24 -6 0 0 24z"/>
+   <polygon class="fil0Paused str0Paused" points="70,10 87,10 88,22 81,22 81,17 76,17 76,26 87,26 87,48 70,48 70,36 76,36 76,41 81,41 81,31 70,31 "/>
+   <path class="fil0Paused str1Paused" d="M27 10l18 0 0 38 -18 0 0 -27 11 0 0 -4 -11 0 0 -7zm7 17l5 0 0 13 -5 0 0 -13z"/>
+  </svg>
+
+
+     <svg   id="gameOver"   viewBox="0 0 620 145">
+         <path class="fil0GameOver str0GameOver" d="M77 13l59 0 0 115 -59 0 0 -84 35 0 0 -11 -35 0 0 -20zm23 53l14 0 0 41 -14 0 0 -41z"/>
+         <path class="fil0GameOver str0GameOver" d="M303 127l-59 0 0 -115 59 0 0 84 -35 0 0 11 35 0 0 20zm-23 -53l-14 0 0 -41 14 0 0 41z"/>
+         <path class="fil0GameOver str0GameOver" d="M409 127l-59 0 0 -115 59 0 0 115zm-23 -21l-14 0 0 -73 14 0 0 73z"/>
+         <path class="fil0GameOver str0GameOver" d="M542 127l-59 0 0 -115 59 0 0 84 -35 0 0 11 35 0 0 20zm-23 -53l-14 0 0 -41 14 0 0 41z"/>
+         <path class="fil0GameOver str0GameOver" d="M10 140l57 0 0 -128 -56 0 0 97 34 0 0 10 -35 0 0 22zm22 -59l14 0 0 -48 -14 0 0 48z"/>
+         <polygon class="fil0GameOver str0GameOver" points="235,127 213,127 213,34 200,34 200,127 179,127 179,34 166,34 166,127 143,127 143,12 235,12 "/>
+         <polygon class="fil1GameOver str0GameOver" points="460,127 432,127 417,99 416,12 440,12 440,107 451,107 451,12 475,12 474,100 "/>
+         <path class="fil1GameOver str0GameOver" d="M610 127l-23 0 0 -24 -12 0 0 24 -24 0 0 -115 59 0 0 60 -34 0 0 10 34 0 1 46zm-23 -77l-12 0 0 -17 12 0 0 17z"/>
+     </svg>
+
+
+     <svg  id="OkButton"  viewBox="0 0 190 100">
+         <path class="fil0OkButton str0OkButton" d="M135 97l-42 0 0 -81 42 0 0 81zm-17 -15l-10 0 0 -51 10 0 0 51z"/>
+         <polygon class="fil0OkButton str0OkButton" points="48,82 5,82 5,38 48,38 "/>
+         <polygon class="fil0OkButton str0OkButton" points="182,97 165,97 165,72 157,72 157,97 142,97 142,6 157,6 157,32 165,32 165,16 182,16 182,48 158,48 158,56 182,56 "/>
+     </svg>
+
+
 
  </div>
 
