td-0005-score,level,line,ifo

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,25 @@
  </g>
 </svg>
 
+  <p id="numberOfLevel" class="numbers">0</p>
+  <svg id="level"  style="" viewBox="0 0 70 38">
+   <path class="fil0Level str0Level" d="M6 35l7 0 0 -32 -7 0 0 32m14 -8l9 0m-15 8l15 0 0 -29 -15 0 0 29zm7 -15l0 -7m29 14l9 0m-15 8l15 0 0 -29 -15 0 0 29zm7 -15l0 -7m8 22l7 0 0 -32 -7 0 0 32m-16 -29l-7 0 -7 0 1 25 4 5 6 0 4 -5 0 -25m-7 0l0 22"/>
+  </svg>
+
+     <p id="numberOfLines" class="numbers">0</p>
+     <svg  id="Lines" viewBox="0 0 70 40">
+         <path class="fil0Lines str0Lines" d="M14 36l7 0 0 -32 -7 0 0 32zm0 -24l7 0 0 -8 -7 0 0 8z"/>
+         <polyline class="fil0Lines str0Lines" points="5,36 12,36 12,4 5,4 5,36 "/>
+         <path class="fil0Lines str0Lines" d="M51 36l15 0 0 -29 -15 0 0 29zm14 -18l-8 0m1 -4l0 5m-7 6l8 0m-1 4l0 -5"/>
+         <path class="fil0Lines str0Lines" d="M42 28l9 0m-15 8l15 0 0 -29 -15 0 0 29zm7 -15l0 -7"/>
+         <path class="fil0Lines str0Lines" d="M21 36l15 0 0 -29 -15 0 0 29m7 0l0 -22"/>
+     </svg>
+
+     <p id="numberOfScore" class="numbers">0</p>
+  <svg id="score"  viewBox="0 0 85 38">
+   <path class="fil0Score str0Score" d="M51 34l15 0 0 -29 -15 0 0 29zm6 -13l9 0m-8 14l0 -7m0 -13l0 -3m-54 23l15 0 0 -29 -15 0 0 29zm14 -18l-8 0m1 -4l0 5m-7 6l8 0m-1 4l0 -5m61 4l9 0m-15 8l15 0 0 -29 -15 0 0 29zm7 -15l0 -7m-38 22l15 0 0 -29 -15 0 0 29m8 -8l0 -14m-23 22l15 0 0 -29 -15 0 0 29m8 -8l0 -14m0 7l8 0"/>
+  </svg>
+
  </div>
 
 </body>
