TD_ 0009_game restart

--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,29 @@
    <path class="fil0Score str0Score" d="M51 34l15 0 0 -29 -15 0 0 29zm6 -13l9 0m-8 14l0 -7m0 -13l0 -3m-54 23l15 0 0 -29 -15 0 0 29zm14 -18l-8 0m1 -4l0 5m-7 6l8 0m-1 4l0 -5m61 4l9 0m-15 8l15 0 0 -29 -15 0 0 29zm7 -15l0 -7m-38 22l15 0 0 -29 -15 0 0 29m8 -8l0 -14m-23 22l15 0 0 -29 -15 0 0 29m8 -8l0 -14m0 7l8 0"/>
   </svg>
 
+     <svg  id="quit"  viewBox="0 0 85 40">
+
+         <rect class="fil0quit str0quit" x="5" y="14" width="15" height="15"/>
+         <rect class="fil0quit str1quit" x="62" y="5" width="4" height="4"/>
+         <rect class="fil0quit str1quit" x="62" y="12" width="4" height="22"/>
+         <path class="fil0quit str1quit" d="M31 8l12 0 0 29 -5 0 0 -2 -7 0 0 -26zm4 4l4 0 0 17 -4 0 0 -17z"/>
+         <polygon class="fil0quit str1quit" points="47,7 51,7 51,28 54,28 54,7 59,7 59,34 47,34 "/>
+         <polygon class="fil0quit str1quit" points="69,5 75,5 75,7 82,7 82,12 78,12 78,11 73,11 73,29 78,29 78,15 82,15 82,33 69,33 "/>
+
+     </svg>
+
+
+     <svg id="pause"  viewBox="0 0 105 35">
+
+         <rect class="fil0Pause str0Pause" x="3" y="11" width="15" height="15"/>
+         <polygon class="fil0Pause str1Pause" points="58,3 63,3 63,25 66,25 66,3 70,3 70,30 58,30 "/>
+         <path class="fil0Pause str1Pause" d="M39 4l-12 0 0 29 5 0 0 -2 7 0 0 -26zm-4 4l-4 0 0 17 4 0 0 -17z"/>
+         <path class="fil0Pause str2Pause" d="M42 4l13 0 0 26 -13 0 0 -19 8 0 0 -3 -8 0 0 -4zm5 12l3 0 0 9 -3 0 0 -9z"/>
+         <path class="fil0Pause str2Pause" d="M101 30l-13 0 0 -26 13 0 0 19 -8 0 0 3 8 0 0 5zm-5 -12l-3 0 0 -9 3 0 0 9z"/>
+         <polygon class="fil0Pause str1Pause" points="73,4 85,4 85,11 80,11 80,8 77,8 77,15 85,15 85,30 73,30 73,22 77,22 77,25 80,25 80,19 73,19 "/>
+
+     </svg>
+
 
 
  </div>
