--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title> віпадающее меню </title>
+	<title> SergiTes </title>
 	<link rel="stylesheet" href="main.css">
 
     <script src = "../lib/jquery-3.1.1.js">  </script>
